--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<head>
 		<title>Sasha Sandeles - Media</title>
 		<meta charset="utf-8" />
+		<link rel="shortcut icon" type="image/x-icon" href="images/sashasandeles_icon.ico">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
